fixes issues #65 and #64 : projects cards vertical alignement + previous commit (ec6->standard js)

--- a/scss/categories.scss
+++ b/scss/categories.scss
@@ -16,6 +16,7 @@ a {
 	display: inline-block;
 	position: relative;
 	width: 100%;
+	vertical-align: top;
 }
 @media (min-width: 750px) {
 	.categories .category {
